--- a/src/app/views/gifts.html
+++ b/src/app/views/gifts.html
@@ -1,5 +1,8 @@
 <h1>Gifts?</h1>
-
+<pre>
+  Price: {{price}}
+  Filter: {{filter}}
+</pre>
 <ul class="media-list">
   <li class="media" ng-repeat="gift in gifts | filter:giftFilter">
     <a class="pull-left" ng-href="{{gift.link}}">
