--- a/www/views/price.html
+++ b/www/views/price.html
@@ -1,6 +1,6 @@
 	<div class="row price">
 		<div class="col-xs-12 title">
-			<img src="images/budget.png" />
+			<img height="50" src="images/budget.png" />
 		</div>
 	</div>
 	<div>
