--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,10 +43,13 @@
 .slider .label span {
 	display: block;
 	color: #000;
-	font-size: 48px;
+	font-size: 40px;
+	width: 100px;
+	text-align: center;
 	position: absolute;
-	left:50px;
-	top: 50px;	
+	left:22px;
+	top: 30px;	
+	color:#FFF;
 
 }
 
