--- a/www/views/start.html
+++ b/www/views/start.html
@@ -1,5 +1,23 @@
-<div class="panel">
-	<p>Deze app gaat je een aantal vragen stellen. Op basis van de antwoorden doet YUNO een voorstel voor een geschikt cadeau, die je meteen kunt bestellen.</p>
+<div class="row start">
+	<div class="col-xs-12 top">
+		<p>Deze app gaat je</p>
+		<p>een aantal vragen</p>
+		<p>stellen</p>
+	</div>
+	<div class="col-xs-12 bottom">
+		<p>Op basis van de antwoorden doet</p>
+		<p>YUNO een voorstel voor een</p>
+		<p>geschikt cadeau, die je meteen</p>
+		<p>kunt bestellen</p>
+	</div>
 </div>
 
-<button class="btn btn-default" ng-click="start()">Start</button>
+
+
+<div class="navbar navbar-fixed-bottom">
+	<div class="container footer">
+		<div class="row row-medium">
+			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="start()">Next &gt;</button>
+		</div>
+	</div>
+</div>
