Look and feel update

--- a/src/views/price.html
+++ b/src/views/price.html
@@ -1,10 +1,16 @@
-	<div class="row price">
-		<div class="col-xs-12 title">
-			<img height="50" src="images/budget.png" />
+<div class="row price">
+	<div class="col-xs-12 title">
+		<img height="50" src="images/budget.png" />
+	</div>
+</div>
+<div>
+
+<div id="slider" class="slider"></div>
+
+<div class="navbar navbar-fixed-bottom">
+	<div class="container footer">
+		<div class="row row-medium">
+			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="next()">Next &gt;</button>
 		</div>
 	</div>
-	<div>
-
-	<div id="slider" class="slider"></div>
-
-	<button class="btn btn-block btn-lg btn-yuno-blue" ng-click="next()">Next &gt;</button>
+</div>
