--- a/src/views/start.html
+++ b/src/views/start.html
@@ -17,7 +17,7 @@
 <div class="navbar navbar-fixed-bottom">
 	<div class="container footer">
 		<div class="row row-medium">
-			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="start()">Next &gt;</button>
+			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="start()">Volgende &gt;</button>
 		</div>
 	</div>
 </div>
