--- a/www/css/yuno.css
+++ b/www/css/yuno.css
@@ -1,6 +1,7 @@
 .header {
 	background: #009BBC;
 	height: 75px;
+	border-bottom: #FFBBD7 solid 5px;
 }
 
 .header .logo{
@@ -20,13 +21,13 @@
 	color:#FFF;
 	text-align: center;
 	padding: 15px;
-	font-size: 24px;
+	font-size: 18px;
 }
 
 .start .bottom{
 	text-align: center;
 	padding: 15px;
-	font-size: 24px;
+	font-size: 18px;
 }
 
 .price {
@@ -76,4 +77,40 @@
 	font-size: 24px;
 	font-weight: bold;
 	color: #FFF;
+	border-radius: 0;
+}
+
+.btn-yuno-pink {
+	background: #FFBBD7;
+	font-size: 24px;
+	font-weight: bold;
+	color: #FFF;
+	border-radius: 0;
+}
+
+.btn-yuno-green {
+	background: #87E634;
+	font-size: 24px;
+	font-weight: bold;
+	color: #FFF;
+	border-radius: 0;
+}
+
+.questions{
+
+}
+
+.questions .title{
+	background: #000;
+	color:#FFF;
+	padding:15px;
+	font-size: 24px;
+	text-align: center;
+}
+
+.questions .question{
+	padding:15px;
+	font-size: 18px;
+	padding:30px;
+	text-align: center;
 }
