--- a/src/views/price.html
+++ b/src/views/price.html
@@ -10,7 +10,7 @@
 <div class="navbar navbar-fixed-bottom">
 	<div class="container footer">
 		<div class="row row-medium">
-			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="next()">Next &gt;</button>
+			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="next()">Volgende &gt;</button>
 		</div>
 	</div>
 </div>
