--- a/src/views/questions.html
+++ b/src/views/questions.html
@@ -16,7 +16,7 @@
 <div class="navbar navbar-fixed-bottom">
 	<div class="container footer">
 		<div class="row row-medium">
-			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="next()">&lt; Terug</button>
+			<button class="btn btn-yuno-blue btn-lg btn-block" ng-click="back()">&lt; Terug</button>
 		</div>
 	</div>
 </div>
