--- a/src/views/price.html
+++ b/src/views/price.html
@@ -1,6 +1,6 @@
 <div class="row price">
 	<div class="col-xs-12 title">
-		<img height="50" src="images/budget.png" />
+		Wat is je <strong>Budget?</strong>
 	</div>
 </div>
 <div>
