--- a/www/views/start.html
+++ b/www/views/start.html
@@ -1,7 +1,7 @@
 <div class="row start">
 	<div class="col-xs-12 top">
 		<p>Deze app gaat je</p>
-		<p>een aantal vragen</p>
+		<p><span class="trashHand">een aantal vragen</span></p>
 		<p>stellen</p>
 	</div>
 	<div class="col-xs-12 bottom">
