--- a/www/views/gifts.html
+++ b/www/views/gifts.html
@@ -16,7 +16,7 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <button class="btn btn-yuno-blue btn-lg btn-block" ng-click="order()">Bestel bij bol.com</button>
+      <a class="btn btn-yuno-blue btn-lg btn-block" href="http://bol.com">Bestel bij bol.com</a>
     </div>
   </div>
 </div>
