--- a/src/views/price.html
+++ b/src/views/price.html
@@ -5,7 +5,10 @@
 </div>
 <div>
 
-<div id="slider" class="slider"></div>
+<div id="slider" class="slider">
+	<div class="tag tag-100"></div>
+	<div class="tag tag-5"></div>
+</div>
 
 <div class="navbar navbar-fixed-bottom">
 	<div class="container footer">
