--- a/src/views/gifts.html
+++ b/src/views/gifts.html
@@ -3,7 +3,7 @@
   Filter: {{filter}}
 </pre>-->
 
-<div class="row gifts">
+<div class="row gifts" ng-swipe-right="back()" ng-swipe-left="next()">
     <button class="btn btn-yuno-blue btn-lg back" ng-click="back()">&lt;</button>
     <button class="btn btn-yuno-blue btn-lg next" ng-click="next()">&gt;</button>
     <div class="title">Het ideale cadeau</div>
