--- a/src/views/start.html
+++ b/src/views/start.html
@@ -5,10 +5,7 @@
 		<p>stellen</p>
 	</div>
 	<div class="col-xs-12 bottom">
-		<p>Op basis van de antwoorden doet</p>
-		<p>YUNO een voorstel voor een</p>
-		<p>geschikt cadeau, die je meteen</p>
-		<p>kunt bestellen</p>
+		<p>Op basis van de antwoorden doet YUNO een voorstel voor een geschikt cadeau, die je meteen kunt bestellen</p>
 	</div>
 </div>
 
