--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@
 	}
 
 .content {
-	margin-top: 75px;
+	margin: 75px auto;
 }
 
 .start{
@@ -72,7 +72,7 @@
 .slider {
 	width: 10px;
 	height: 300px;
-	margin: 75px auto;
+	margin: 50px auto 0;
 	border: none;
 	border-radius: 0;
 	background: url('../images/slider_bg.png');
@@ -106,7 +106,6 @@
 	width: 20px;
 	height: 20px;
 	border-radius: 10px;
-	background: #000;
 	border: #87E634 solid 4px;
 }
 
