--- a/src/views/gifts.html
+++ b/src/views/gifts.html
@@ -16,7 +16,7 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <a class="btn btn-yuno-blue btn-lg btn-block" href="http://bol.com">Bestel bij bol.com</a>
+      <a class="btn btn-yuno-blue btn-lg btn-block" target="_blank" href="http://bol.com">Bestel bij bol.com</a>
     </div>
   </div>
 </div>
