small look and feel changes

--- a/www/views/gifts.html
+++ b/www/views/gifts.html
@@ -7,9 +7,16 @@
     <button class="btn btn-yuno-blue btn-lg back" ng-click="back()">&lt;</button>
     <button class="btn btn-yuno-blue btn-lg next" ng-click="next()">&gt;</button>
     <div class="title">Het ideale cadeau</div>
-    <img class="image" ng-src="{{gift().image}}" />
-    <div class="name">{{gift().name}}</div>
-    <div class="description">{{gift().description}}</div>
+    <div class="holder">
+      <img class="image" ng-src="{{gift().image}}" />
+    </div>
+    <div class="description">
+      <span class="pull-right"><strong>&euro; {{gift().price}}</strong></span>
+      <span><strong>{{gift().name}}</strong></span></br>
+      <span>{{gift().description}}</span>
+    </div>
+    
+   
 
 </div>
 
