--- a/www/views/gifts.html
+++ b/www/views/gifts.html
@@ -23,7 +23,7 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <a class="btn btn-yuno-blue btn-lg btn-block" target="_blank" href="http://bol.com">Bestel bij BOL.com</a>
+      <a class="btn btn-yuno-blue btn-lg btn-block" ng-click="order()">Bestel bij BOL.com</a>
     </div>
   </div>
 </div>
