--- a/www/css/yuno.css
+++ b/www/css/yuno.css
@@ -4,9 +4,10 @@
 	src: url('../fonts/TrashHand.TTF');
 }
 
-.btn {
+.btn, .btn:hover{
+	color:#FFF;
 	font-family: TrashHand, Verdana;
-	text-shadow: 5px 5px #000000;
+	text-shadow: 1px 1px #000000;
 }
 
 .header {
@@ -123,6 +124,7 @@
 	left:25px;
 	top: -44px;
 	font-family: TrashHand, Verdana;
+	text-shadow: 1px 1px #000000;
 	padding:0;
 	
 }
@@ -214,14 +216,19 @@
 	font-family: TrashHand, Verdana;
 }
 
-.gifts .image{
-	width: 100%;
-	display: block;
-	margin-bottom: 20px
+.gifts .holder{
+	height: 300px;
+	overflow: hidden;
+	text-align: center;
 }
 
-.gifts .name{
-	font-size: 16px;
-	font-weight: bold;
-	margin-bottom: 10px;
+.gifts .image{
+	max-height: 300px;
+	display: block;
+	margin: auto;
+	padding: 0 20px
+}
+
+.gifts .description{
+	padding: 0 50px;
 }
