Naamvraag + nieuw algoritme + backbutton

--- a/src/views/gifts.html
+++ b/src/views/gifts.html
@@ -2,7 +2,6 @@
   Price: {{price}}
   Filter: {{filter}}
 </pre>-->
-
 <div class="row gifts" ng-swipe-right="back()" ng-swipe-left="next()">
     <button class="btn btn-yuno-blue btn-lg back" ng-click="back()">&lt;</button>
     <button class="btn btn-yuno-blue btn-lg next" ng-click="next()">&gt;</button>
@@ -12,7 +11,7 @@
     </div>
     <div class="description">
       <span class="pull-right"><strong>&euro; {{gift().price}}</strong></span>
-      <span><strong>{{gift().name}}</strong></span></br>
+      <span><strong>{{gift().gifts}}</strong></span></br>
       <span>{{gift().description}}</span>
     </div>
     
