--- a/www/views/gifts.html
+++ b/www/views/gifts.html
@@ -20,10 +20,10 @@
 
 </div>
 
-<div class="navbar navbar-static-bottom">
+<div class="navbar navbar-fixed-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <a class="btn btn-yuno-blue btn-lg btn-block" ng-click="order()">Naar de webshop</a>
+      <a class="btn btn-yuno-blue btn-lg btn-block" ng-click="order()">Bestel bij BOL.com</a>
     </div>
   </div>
 </div>
