--- a/www/views/gifts.html
+++ b/www/views/gifts.html
@@ -25,10 +25,8 @@
 <div class="navbar navbar-static-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <a class="btn btn-yuno-blue btn-lg btn-block" onclick="window.plugins.socialsharing.share('Message only')">Delen</a>
+      <a class="btn btn-yuno-blue btn-lg btn-block">Delen</a>
     </div>
   </div>
 </div>
-
-<script type="text/javascript" src="lib/SocialSharing/SocialSharing.js"></script>
 
