config.xml naar src

--- a/src/views/gifts.html
+++ b/src/views/gifts.html
@@ -25,7 +25,7 @@
 <div class="navbar navbar-static-bottom">
   <div class="container footer">
     <div class="row row-medium">
-      <a class="btn btn-yuno-blue btn-lg btn-block">Delen</a>
+      <a class="btn btn-yuno-blue btn-lg btn-block" onclick="$(window)[0].plugins.socialsharing.share('Deelbericht')">Delen</a>
     </div>
   </div>
 </div>
